--- a/assets/css/scrollbar.css
+++ b/assets/css/scrollbar.css
@@ -2,13 +2,8 @@ html {
     overflow: auto;
 }
 #scrollbar{
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    bottom: 20px;
-    right: 20px;
-    padding: 30px; 
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
+    max-height: 100vh;
+    min-height: 100vh;
 }
 
